# SmartCity

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  sdkconfig
.cache/clangd/index/: Leq_task.c.E6ECECB86B4500A3.idx  Leq_task.h.A7EFCD48D9B88FC7.idx  WiFi_manager.c.10674C700CBA1DF8.idx  WiFi_manager.h.CF9ACC3BE312310E.idx  audio_task.c.0628424616A8901F.idx  audio_task.h.0391AD9BE7E06E48.idx  aux_task.c.5B2981EB89DCACEF.idx  aux_task.h.2960BDA7117B095D.idx  cast_and_scale.S.5C16DB8852221B78.idx  config.c.DB16F222A78137AF.idx  config.h.C8894828864341FE.idx  filtro.S.31E8FF043DEC84EB.idx  http_client.c.7432BB81B3F8547A.idx  http_client.h.17FD097DBBB6B2DD.idx  logica_control.c.4D88BB283BDCD508.idx  logica_control.h.041A58BE4604441D.idx  main.c.9F689411D702D635.idx  ota.c.EA9EB47A8FA69AE8.idx  ota.h.7648FB832C98143A.idx  product_and_acu.S.7E8E6EECE85EA609.idx  test.S.78FDB4A3B29EEEDE.idx
main/: .cproject  CMakeLists.txt  Leq_task.c  Leq_task.h  WiFi_manager.c  WiFi_manager.h  audio_task.c  audio_task.h  aux_task.c  aux_task.h  cast_and_scale.S  config.c  config.h  filtro.S  http_client.c  http_client.h  logica_control.c  logica_control.h  main.c  mqtt.c  mqtt.h  ota.c  ota.h  product_and_acu.S  test.S
main/web/: index.html  script.js  styles.css
